# CameraControlApp_ExportImport

./: CMakeLists.txt  Document_CGI.txt  Makefile  app.rc  build_windows.bat  camera.c  camera.h  camera_app  http_client.c  http_client.h  main.c  mock_presets_localhost.json  toolchain-mingw.cmake
build_win/: CMakeCache.txt  Makefile  cmake_install.cmake
